--- a/index.html
+++ b/index.html
@@ -336,7 +336,39 @@
         </div>
     </section>
     <!-- CONTACT -->
-    <section class="contact"></section>
+    <section class="contact">
+        <h2>CONTACT</h2>
+        <div class="contact__form">
+            <form>
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Last Name">
+                <input type="email" placeholder="Email">
+                <input type="tel" placeholder="Phone">
+                <textarea cols="30" rows="10" placeholder="Message"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <div class="contact__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15674.888877938542!2d106.66882592664199!3d10.832557026534257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175298b88aade15%3A0x72635a3d27e2dda1!2sCity%20Land%20Garden%20Hills!5e0!3m2!1sen!2s!4v1660308447419!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="contact__info">
+            <div class="contact__items">
+                <i class="fa fa-home"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="contact__items">
+                <i class="fa fa-phone"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="contact__items">
+                <i class="fa fa-envelope-open"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </section>
     <!-- FOOTER  -->
     <footer></footer>
 
