--- a/index.html
+++ b/index.html
@@ -370,7 +370,69 @@
         </div>
     </section>
     <!-- FOOTER  -->
-    <footer></footer>
+    <footer>
+        <div class="footer__main">
+            <div class="footer__item">
+                <h3>About Us</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quis dolor eos, ullam soluta nostrum!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, rem.</p>
+                <div class="footer__socials">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                </div>
+            </div>
+            <div class="footer__item">
+                <h3>Working Time</h3>
+                <div class="footer__time">
+                    <p>Monday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Tuesday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Wednesday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Thursday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Friday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Sartuday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+                <div class="footer__time">
+                    <p>Sunday</p>
+                    <p>9h30 - 18h30</p>
+                </div>
+            </div>
+            <div class="footer__item">
+                <h3>Twitter Us</h3>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="footer__item">
+                <h3>SUBSCRIBE US</h3>
+                <form class="footer__sub">
+                    <input type="email" placeholder="name@example.com">
+                    <button type="submit">Send</button>
+                </form>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore omnis earum debitis cupiditate voluptates magni suscipit assumenda, doloremque beatae eveniet.</p>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <p>&copy; 2020 Lorem ipsum dolor sit amet. | Design by <span>Cybersoft</span></p>
+        </div>
+    </footer>
 
     <!-- Thư viện hỗ trợ jquery giúp chạy hiệu ứng của các thư viện animation  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
